feat: add endpoint POST /api/me/biography
