# docs/swagger.json
@@ -160,7 +160,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "login"
+                    "auth"
                 ],
                 "summary": "retrieve information of authenticated user",
                 "parameters": [
@@ -181,6 +181,62 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/structs.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/structs.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/me/biography": {
+            "post": {
+                "description": "update biography of authenticated user",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "update biography of authenticated user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JSON Web Token",
+                        "name": "X-Auth-Token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "new biography",
+                        "name": "Biography",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/structs.Biography"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/structs.Me"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/structs.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/structs.Error"
                         }
@@ -379,6 +435,14 @@
                 }
             }
         },
+        "structs.Biography": {
+            "type": "object",
+            "properties": {
+                "biography": {
+                    "type": "string"
+                }
+            }
+        },
         "structs.Error": {
             "type": "object",
             "properties": {
@@ -411,6 +475,9 @@
             "properties": {
                 "avatar": {
                     "$ref": "#/definitions/structs.Avatar"
+                },
+                "biography": {
+                    "type": "string"
                 },
                 "currency": {
                     "type": "integer"
